<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/Image_of_del"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:src="@drawable/deliverboy_1"
        android:layout_marginTop="200dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:contentDescription="@string/bike" />

    <ImageView
        android:id="@+id/Image_of_dorne"
        android:layout_width="222dp"
        android:layout_height="179dp"
        android:layout_marginTop="176dp"
        android:contentDescription="@string/bike"
        android:src="@drawable/drone"
        app:layout_constraintBottom_toTopOf="@+id/NextINTENT"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.003" />

    <Button
        android:id="@+id/NextINTENT"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginEnd="40dp"
        android:layout_marginBottom="10dp"
        android:drawableStart="@drawable/arrow"
        android:background="@drawable/arrow_shape"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/ring_it"
        android:textStyle="bold|italic"
        android:textColor="@color/black"
        android:textSize="40sp"
        android:padding="20dp"
        android:layout_marginStart="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="228dp"
        android:layout_height="77dp"
        android:text="@string/we_deliver"
        android:textStyle="bold|italic"
        android:textColor="@color/black"
        android:textSize="40sp"
        android:layout_marginTop="100dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>